View Issue Details

IDProjectCategoryView StatusLast Update
0006897Open CASCADEOCCT:Visualizationpublic2014-11-11 12:52
ReporterkhrAssigned Toapn  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
OSWindows NT 
Target Version6.8.0Fixed in Version6.8.0 
Summary0006897: Impossible to change edge line type in 3D View
DescriptionChanging edge line types by the method
Aspect_AspectFillArea::SetEdgeLineType() doesn't produce
any effect in 3D View.
TagsNo tags attached.
Test case numberbugs vis bug6897_1 bug6897_2

Activities

kgv

2014-02-05 14:51

developer   ~0027775

Dear aba,

please try to reproduce this issue on current master.

aba

2014-05-13 16:40

developer   ~0029303

Last edited: 2014-05-13 16:41

After changing the aspect parameters, object is to be redisplayed. It means that AIS_InteractiveContext::Redisplay() method should be called.

The alternative way is to follow next steps:
1) to set shading aspect with edge line type
2) to call AIS_InteractiveObject::SetAspect(aShadingAspect)

The test command vsetedgetype and the test case /bugs/vis/bug6897 were added to demonstrate and test this functionality.

The git branch CR6897 is ready to be reviewed.

Dear san,

please review.

san

2014-05-15 17:38

developer   ~0029355

Branch CR6897 reviewed without remarks, ready for testing.

apn

2014-05-21 13:46

administrator   ~0029435

Dear BugMaster,

Branch CR6897 (and products from GIT master) was compiled on Linux, Windows and MacOS platforms and tested.
SHA-1: 6f34092f8ac33f7e1d664fedfa88c12de249bba2

Number of compiler warnings:

occt component :
Linux: 17 (17 on master)
Windows: 0 (0 on master)
MacOS: 202 (205 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
No regressions

Testing cases:
bugs vis bug6897_1 - OK
http://occt-tests/CR6897-master-occt/Debian60-64/bugs/vis/bug6897_1.html
http://occt-tests/CR6897-master-occt/Windows-32-VC9/bugs/vis/bug6897_1.html

bugs vis bug6897_2 - OK
http://occt-tests/CR6897-master-occt/Debian60-64/bugs/vis/bug6897_2.html
http://occt-tests/CR6897-master-occt/Windows-32-VC9/bugs/vis/bug6897_2.html

Testing on Linux:
Total MEMORY difference: 356506320 / 357326856
Total CPU difference: 55406.600000000006 / 56363.43999999993

Testing on Windows:
Total MEMORY difference: 379291764 / 379613888
Total CPU difference: 44301.890625 / 35503.203125

There are no differences in images found by testdiff.

Related Changesets

occt: master 5ad539d2

2014-05-22 13:29:57

aba


Committer: apn Details Diff
0006897: Impossible to change edge line type in 3D View

Added command vsetedgetype; added test case bugs/vis/bug6897 to test edge type management.
vunsetedgetype DRAW command was added and test case was updated.
added -force option to set edge type commands to force redisplay.
Otherwise primitive aspects are updated without object redisplaying.
Affected Issues
0006897
mod - src/ViewerTest/ViewerTest_ObjectCommands.cxx Diff File
add - tests/bugs/vis/bug6897_1 Diff File
add - tests/bugs/vis/bug6897_2 Diff File

Issue History

Date Modified Username Field Change
2004-11-01 11:38 bugmaster Assigned To bugmaster => vtn
2004-11-01 11:38 bugmaster Status new => assigned
2005-01-12 16:33 bugmaster Assigned To vtn => san
2011-08-02 11:24 bugmaster Category OCCT:VIZ => OCCT:Visualization
2014-02-05 14:51 kgv Note Added: 0027775
2014-02-05 14:51 kgv Assigned To san => aba
2014-02-05 14:51 kgv Status assigned => feedback
2014-02-05 14:51 kgv Fixed in Version EMPTY =>
2014-02-05 14:51 kgv Target Version => 6.7.1
2014-02-05 14:51 kgv Description Updated
2014-04-04 17:28 abv Target Version 6.7.1 => 6.8.0
2014-05-13 16:21 aba Status feedback => assigned
2014-05-13 16:40 aba Note Added: 0029303
2014-05-13 16:40 aba Assigned To aba => san
2014-05-13 16:40 aba Status assigned => resolved
2014-05-13 16:41 aba Note Edited: 0029303
2014-05-15 17:38 san Note Added: 0029355
2014-05-15 17:38 san Assigned To san => bugmaster
2014-05-15 17:38 san Status resolved => reviewed
2014-05-19 14:16 apn Assigned To bugmaster => apn
2014-05-21 13:46 apn Note Added: 0029435
2014-05-21 13:46 apn Test case number => bugs vis bug6897_1 bug6897_2
2014-05-21 13:46 apn Assigned To apn => bugmaster
2014-05-21 13:46 apn Status reviewed => tested
2014-05-23 14:25 apn Changeset attached => occt master 5ad539d2
2014-05-23 14:25 apn Assigned To bugmaster => apn
2014-05-23 14:25 apn Status tested => verified
2014-05-23 14:25 apn Resolution open => fixed
2014-11-11 12:46 aiv Fixed in Version => 6.8.0
2014-11-11 12:52 aiv Status verified => closed