0006897: Impossible to change edge line type in 3D View

Added command vsetedgetype; added test case bugs/vis/bug6897 to test edge type management.
vunsetedgetype DRAW command was added and test case was updated.
added -force option to set edge type commands to force redisplay.
Otherwise  primitive aspects are updated without object redisplaying.